Add 5 buttons for simon, memmory color game. Added script for color patern to blik, bug acuers where color all on at ones.

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 
 <body>
-    <button id="button-1">Button 1</button>
-    <button id="button-2">Button 2</button>
-    <button id="button-3">Button 3</button>
-    <button id="button-4">Button 4</button>
-    <button id="button-5" onclick="colorPatternChange()">Button 5</button>
+    <button id="red-button">Button 1</button>
+    <button id="blue-button">Button 2</button>
+    <button id="green-button">Button 3</button>
+    <button id="yellow-button">Button 4</button>
+    <button id="start-button">Start</button>
 </body>
 
 </html>
