Fixed a bug where same color only blinks ones. Needet to increas the duration of the function call

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 
 <body>
-    <button id="red-button">Button 1</button>
-    <button id="blue-button">Button 2</button>
-    <button id="green-button">Button 3</button>
-    <button id="yellow-button">Button 4</button>
+    <button id="red-button" class="color-btn">Button 1</button>
+    <button id="blue-button" class="color-btn">Button 2</button>
+    <button id="green-button" class="color-btn">Button 3</button>
+    <button id="yellow-button" class="color-btn">Button 4</button>
     <button id="start-button">Start</button>
 </body>
 
