--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <button id="blue-button" class="color-btn">Button 2</button>
     <button id="green-button" class="color-btn">Button 3</button>
     <button id="yellow-button" class="color-btn">Button 4</button>
-    <button id="start-button">Start</button>
+    <button id="start-button" style="background-color: orange;">Start</button>
 </body>
 
 </html>
