Add current score and high score counter

--- a/index.html
+++ b/index.html
@@ -13,11 +13,21 @@
 </head>
 
 <body>
-    <button id="red-button" class="color-btn">Button 1</button>
-    <button id="blue-button" class="color-btn">Button 2</button>
-    <button id="green-button" class="color-btn">Button 3</button>
-    <button id="yellow-button" class="color-btn">Button 4</button>
-    <button id="start-button" style="background-color: orange;">Start</button>
+    <div id="game-area">
+        <button id="red-button" class="color-btn">Button 1</button>
+        <button id="blue-button" class="color-btn">Button 2</button>
+        <button id="green-button" class="color-btn">Button 3</button>
+        <button id="yellow-button" class="color-btn">Button 4</button>
+        <button id="start-button" style="background-color: orange;">Start</button>
+    </div>
+    <div id="score-area">
+        <p>Current Score - <span id="current-score">0</span></p>
+        <p>High Score - <span id="high-score">0</span></p>
+    </div>
+    <div id="game-mode-area">
+        <button id="clasic">Medium</button>
+        <button id="extriem">Extriem</button>
+    </div>
 </body>
 
 </html>
