Testing bug fix. A bug acures when trying to play sound on a hosted page, the file can not be found on the local directory. Moved the sound reference from js file to html file

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
         <button id="clasic">Medium</button>
         <button id="extriem">Extriem</button>
     </div>
+    <audio id="stomp">
+        <source src="/assets/sound/stomp-1_short.mp3" type="audio/mp3">
+    </audio>
+    <p id="demo"></p>
 </body>
 
 </html>
