--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Bootstrap -->
+    <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
+    <script src="https://kit.fontawesome.com/4c53668ab7.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="assets/css/style.css">
     <script type="text/javascript" src="assets/js/jquery.js"></script>
@@ -24,30 +26,31 @@
 
     <!-- Navigations -->
     <header>
-        <div class="container-fluid my-container">
-            <div class="row my-row">
-                <div class="col vertical-center my-col">
-                    <a href="#">Home</a>
+        <div class="container-fluid">
+            <div id="header-row" class="row">
+                <div id="home-icon-container" class="col vertical-center header-link-col">
+                    <a class="header-link" href="#"><img id="home-icon"
+                            src="assets/img/color-disc-icon_eddited.jpg" alt="Home icon"></a>
                 </div>
-                <div class="col vertical-center my-col">
-                    <a href="#">Tutorial</a>
+                <div id="tutorial-icon-container" class="col vertical-center header-link-col">
+                    <a class="header-link" href="#"><i id="turorial-icon" class="fas fa-gamepad"></i></a>
                 </div>
             </div>
         </div>
     </header>
 
     <!-- Game area -->
-    <div class="container my-container">
+    <div id="game-area-container" class="container my-container">
         <div class="row my-row">
             <!-- Medium mode selection -->
             <div class="col vertical-center my-col">
-                <button id="clasic">Medium</button>
+                <button id="clasic" class="mode-btn">Medium</button>
             </div>
             <!-- Start, color buttons -->
             <div id="color-button-area" class="col-6 vertical-center my-col">
                 <div class="row">
                     <div id="red-button" class="col color-area color-btn vertical-center">
-                        <button id="start-button" style="background-color: orange;">Start</button>
+                        <button id="start-button"">Start</button>
                     </div>
                     <div id="blue-button" class="col color-area color-btn vertical-center">
                     </div>
@@ -61,32 +64,28 @@
             </div>
             <!-- Extreem mode selection -->
             <div class="col vertical-center my-col">
-
-                <button id="extriem">Extriem</button>
+                <button id="extriem" class="mode-btn">Extriem</button>
             </div>
         </div>
     </div>
 
-    <div class="continer my-container">
+    <div id="score-container" class="container my-container">
         <div class="row my-row">
-            <div id="score-area" class="col vertical-center my-col">
-                <p>Current Score - <span id="current-score">0</span></p>
+            <div class="col vertical-center my-col">
+                <p class="score-tag">Current Score  <span id="current-score" class="score-holder">0</span></p>
             </div>
             <div class="col vertical-center my-col">
-                <p>High Score - <span id="high-score">0</span></p>
+                <p class="score-tag"><span id="high-score" class="score-holder">0</span>  High Score</p>
             </div>
         </div>
     </div>
 
-    <footer class="vertical-center my-container">Footer</footer>
-
-    <!-- Sound for the blink action, currantly dos not work on a hosted site,
-    becose the site can not find the file sorce -->
-
-    <audio id="stomp">
-        <source src="assets/sound/stomp-1_short.mp3" type="audio/mp3">
-    </audio>
-    <p id="demo"></p>
+    <footer class="vertical-center my-container">
+        <audio id="stomp">
+            <source src="assets/sound/stomp-1_short.mp3" type="audio/mp3">
+        </audio>
+        <p id="demo"></p>
+    </footer>
 </body>
 
 </html>
