Fix bug where after making a mistake the start button is not clickable

--- a/index.html
+++ b/index.html
@@ -52,15 +52,16 @@
             </div>
         </div>
         <div class="row justify-content-center my-row">
+
             <!-- Medium mode selection -->
             <div class="col vertical-center d-none d-lg-block my-col">
                 <button class="mode-btn clasic">Medium</button>
             </div>
+
             <!-- Start, color buttons -->
             <div id="color-button-area" class="col-6 my-col">
                 <div class="row">
                     <div id="red-button" class="col color-area color-btn">
-                        <button id="start-button">Start</button>
                     </div>
                     <div id="blue-button" class="col color-area color-btn">
                     </div>
@@ -71,7 +72,13 @@
                     <div id="yellow-button" class="col color-area color-btn">
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col">
+                        <button id="start-button" class="disabled-button">Start</button>
+                    </div>
+                </div>
             </div>
+
             <!-- Extreem mode selection -->
             <div class="col vertical-center d-none d-lg-block my-col">
                 <button class="mode-btn extriem">Extriem</button>
