Add style for mode buttons, text for footer and fonts

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="row justify-content-center my-row">
 
             <!-- Medium mode selection -->
-            <div class="col vertical-center d-none d-lg-block my-col">
+            <div class="col d-none d-lg-block my-col">
                 <button class="mode-btn clasic">Medium</button>
             </div>
 
@@ -74,13 +74,13 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <button id="start-button" class="disabled-button">Start</button>
+                        <button id="start-button" class="disabled-button"></button>
                     </div>
                 </div>
             </div>
 
             <!-- Extreem mode selection -->
-            <div class="col vertical-center d-none d-lg-block my-col">
+            <div class="col d-none d-lg-block my-col">
                 <button class="mode-btn extriem">Extriem</button>
             </div>
         </div>
@@ -108,6 +108,10 @@
     </div>
 
     <footer class="vertical-center my-container">
+        <p>
+            <br>
+            Made by Karolis Fedorkinas for "Code Institute" milestone project 2. 2021-08-08
+        </p>
         <audio id="stomp">
             <source src="assets/sound/stomp-1_short.mp3" type="audio/mp3">
         </audio>
