Add a tutorial function to the game. After the tutorial the page refreshes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script type="text/javascript" src="assets/js/jquery.js"></script>
     <script type="text/javascript" src="assets/js/color-game.js"></script>
 
-    <title>Color Game</title>
+    <title>Home|Color Game</title>
 </head>
 
 <body>
@@ -75,6 +75,18 @@
                 <div class="row">
                     <div class="col">
                         <button id="start-button" class="disabled-button"></button>
+                        <!--<div id="blink-start"></div>-->
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="div">
+                        <div class="col">
+                        </div>
+                        <div class="col">
+                            <div id="press-one"></div>
+                            <div id="press-two"></div>
+                            <div id="press-three"></div>
+                        </div>
                     </div>
                 </div>
             </div>
