Fixed to center start and color buttons

--- a/index.html
+++ b/index.html
@@ -29,22 +29,22 @@
             <div class="col vertical-center my-col">
                 <i class="fas fa-gamepad main-modes-icons"></i>
             </div>
-            <div class="col my-col">
-                <div class="row my-row">
-                    <div class="col my-col">
+            <div class="col-6 my-col">
+                <div class="row d-flex justify-content-center my-row">
+                    <div class="col d-flex justify-content-center my-col">
                         <button id="start-button" class="disabled-button"><span
                             id="current-score-big">0</span></button>
                     </div>
                 </div>
                 <div class="row my-row">
                     <div class="col my-col">
-                        <div class="row">
+                        <div class="row d-flex justify-content-center">
                             <div id="red-button" class="col color-area color-btn">
                             </div>
                             <div id="blue-button" class="col color-area color-btn">
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="row d-flex justify-content-center">
                             <div id="green-button" class="col color-area color-btn">
                             </div>
                             <div id="yellow-button" class="col color-area color-btn">
