Fix a bug where the game loads only on top of the screen for higher screens

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
 
-    <div id="main-container" class="container-fluid my-container">
+    <div id="main-container" class="container my-container">
         <div id="main-modes" class="row my-row">
             <div class="col d-flex justify-content-center my-col">
                 <span><i id="reset-button" class="fas fa-gamepad main-modes-icons"></i></span>
