Add game modes: classic and extriem

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <div class="row button-are my-row">
             <div class="col show-big-screen vertical-center my-col">
-                <button class="mode-btn btns show-big-screen">Clasic</button>
+                <button id="mode-button" class="mode-btn btns show-big-screen">Classic</button>
             </div>
             <div class="col my-col">
                 <div class="row show-small-screen d-flex justify-content-center my-row">
